--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 /*Global*/
+* {
+	box-sizing: border-box;
+}
 
 :root {
+	--color-light-gray: rgb(128, 128, 128);
 	--color-gray: rgb(59, 59, 59);
 	--color-black: rgb(41, 41, 41);
 	--color-accent-green: rgb(87, 204, 185);
@@ -181,10 +185,21 @@ li a {
 	grid-row: 1/3;
 }
 .project-grid {
-	background-color: var(--color-gray);
 	width: 100%;
 	height: 85%;
 	border-radius: 0.4rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	gap: 1rem;
+}
+.project {
+	background-color: var(--color-gray);
+	border-radius: 5px;
+	transition: 0.2s;
+}
+.project:hover {
+	outline: 2px solid var(--color-accent-green);
+	transform: scale(103%);
 }
 .announcement {
 	grid-column: 2/3;
