--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 /*Global*/
 * {
 	box-sizing: border-box;
+	text-decoration: none;
+}
+a {
+	color: var(--color-font-white);
+	text-decoration: none;
+	transition: 0.2s;
+}
+
+a:hover {
+	color: var(--color-accent-green);
 }
 
 :root {
-	--color-light-gray: rgb(128, 128, 128);
+	--color-light-gray: rgb(156, 156, 156);
 	--color-gray: rgb(59, 59, 59);
 	--color-black: rgb(41, 41, 41);
 	--color-accent-green: rgb(87, 204, 185);
@@ -148,16 +158,6 @@ li a {
 	grid-template-columns: 1fr 5fr;
 }
 
-#aside ul li a {
-	color: var(--color-font-white);
-	text-decoration: none;
-	transition: 0.2s;
-}
-
-#aside ul li a:hover {
-	color: var(--color-accent-green);
-}
-
 .signature {
 	padding-left: 40px;
 	font-weight: 300;
@@ -171,15 +171,18 @@ li a {
 	grid-template-columns: 6fr 1fr;
 	grid-template-rows: 1fr 1fr;
 	width: 95%;
-	height: 100%;
+	height: 80vh;
 	margin: 0 auto;
 	text-align: left;
-	gap: 1.5rem;
+	row-gap: 0.4rem;
+	column-gap: 1.2rem;
 }
 .main-grid h2 {
 	font-weight: 500;
 	font-size: 1.1rem;
 }
+
+/*Project*/
 
 .projects {
 	grid-row: 1/3;
@@ -201,9 +204,71 @@ li a {
 	outline: 2px solid var(--color-accent-green);
 	transform: scale(103%);
 }
+
+/*Announcements*/
+
 .announcement {
 	grid-column: 2/3;
+	grid-row: 1/2;
 }
+.message h4 {
+	font-size: 0.9rem;
+	font-weight: 500;
+	margin-top: 3px;
+}
+.message p {
+	font-size: 0.7rem;
+	color: var(--color-light-gray);
+}
+.message::after {
+	background-color: var(--color-light-gray);
+	content: "";
+	width: 90%;
+	height: 0.5px;
+	display: block;
+}
+.announcements-grid {
+	background-color: var(--color-gray);
+	border-radius: 5px;
+	transition: 0.2s;
+	width: 100%;
+	height: 80%;
+
+	padding: 1rem;
+}
+
+/*Trending*/
+
 .trending {
 	grid-column: 2/3;
+	grid-row: 2/3;
+}
+
+.trending-grid {
+	background-color: var(--color-gray);
+	border-radius: 5px;
+	transition: 0.2s;
+	width: 100%;
+	height: 69%;
+	padding: 16px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.user {
+	display: flex;
+	align-items: center;
+}
+
+.user h5 {
+	margin: 0 10px;
+}
+.user h5 span {
+	font-size: 0.7rem;
+	color: var(--color-light-gray);
+}
+
+.user img {
+	height: 1.8rem;
 }
