--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ a {
 a:hover {
 	color: var(--color-accent-green);
 }
+::-webkit-scrollbar {
+	background-color: var(--color-gray);
+	display: none;
+}
 
 :root {
 	--color-light-gray: rgb(156, 156, 156);
@@ -194,7 +198,10 @@ li a {
 	border-radius: 0.4rem;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-auto-rows: 250px;
 	gap: 1rem;
+	overflow-y: scroll;
+	padding: 1rem;
 }
 .project {
 	background-color: var(--color-gray);
@@ -217,10 +224,12 @@ li a {
 	font-size: 0.9rem;
 	padding: 0.5rem;
 	text-align: left;
+	margin: 0 0;
 }
 .project-title {
 	margin: 0;
 }
+
 .project-resources i {
 	color: var(--color-accent-green);
 	transition: 0.2s;
@@ -256,7 +265,6 @@ li a {
 	border-radius: 5px;
 	transition: 0.2s;
 	width: 100%;
-	height: 83.5%;
 
 	padding: 1rem;
 }
@@ -273,7 +281,7 @@ li a {
 	border-radius: 5px;
 	transition: 0.2s;
 	width: 100%;
-	height: 69%;
+
 	padding: 16px;
 	display: flex;
 	flex-direction: column;
@@ -294,12 +302,12 @@ li a {
 }
 
 .user img {
-	height: 1.8rem;
+	height: 1.5rem;
 }
 
 /*Queries*/
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
 	#main {
 		background-color: var(--color-black);
 	}
